# ReportAgent

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
alembic/: env.py
src/: config.py  exceptions.py
src/agents/: __init__.py  clarify_agent.py  competition_agent.py  graph.py  risk_research_agent.py  search_agent.py  state.py  synthesis_research_agent.py  trend_agent.py
src/api/: __init__.py  app.py  middleware.py  routes.py  sse.py  tasks.py
src/api/static/: app.js  index.html
src/db/: __init__.py  crud.py  engine.py  models.py
src/generator/: __init__.py  exporter.py  renderer.py
src/generator/templates/: research_report.md.j2
src/models/: __init__.py  report.py
src/tools/: __init__.py  web_search.py
src/utils/: __init__.py  helpers.py  logger.py  model_router.py  retry.py
tests/: conftest.py  test_analysis_agents.py  test_helpers.py  test_renderer.py  test_routes.py  test_search_agent.py
