[project]
name = "report-agent"
version = "0.1.0"
description = "智能研究助手 — AI搜索+多Agent分析，生成深度研究报告"
requires-python = ">=3.12"
dependencies = [
    "langgraph==1.2.6",
    "langchain==1.3.11",
    "langchain-openai==1.3.3",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "jinja2==3.1.6",
    "fastapi==0.138.1",
    "uvicorn[standard]==0.49.0",
    "sqlalchemy[asyncio]==2.0.51",
    "aiosqlite==0.22.1",
    "sse-starlette==3.4.5",
    "loguru==0.7.3",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

# ====== pytest ======
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ====== coverage ======
[tool.coverage.run]
source = ["src"]
omit = [
    "*/__init__.py",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
